--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         <meta name="description" content="When is The Merge?" />
+        <meta property="og:image" content="%PUBLIC_URL%/merge-logo.png" />
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
         <!--
       manifest.json provides metadata used when your web app is installed on a
